Updated Python crash course part 3
Added a new code cell in the Python crash course notebook, part 3. This cell demonstrates list comprehension by squaring elements of a given list and printing the output.

--- a/notebooks/python_crash_course/part_3.ipynb
+++ b/notebooks/python_crash_course/part_3.ipynb
@@ -153,6 +153,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 64, 256, 1296]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [4, 8, 16, 36]\n",
+    "out = [num**2 for num in list]\n",
+    "print(out)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
