Added list comprehension example in notebook
A new code cell has been added to the Python crash course notebook. This cell demonstrates the use of list comprehensions with a simple age filtering example. The output of this operation is also printed for clarity.

--- a/notebooks/python_crash_course/part_3.ipynb
+++ b/notebooks/python_crash_course/part_3.ipynb
@@ -172,6 +172,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ages = [10, 12, 99]\n",
+    "out = [age for age in ages if age > 21]\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
